Local instance setup config